k8s/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: pesgerest-api
spec:
  replicas: 1
  selector:
    matchLabels:
      app: pesgerest-api-container
  template:
    metadata:
      labels:
        app: pesgerest-api-container
    spec:
      imagePullSecrets:
        - name: registry-credentials
      containers:
        - name: pesgerest-api
          image: $IMAGE
          imagePullPolicy: Always
          ports:
            - containerPort: 80
