k8s/service.yml
kind: Service
apiVersion: v1
metadata:
  name: pesgerest-api-service
spec:
  selector:
    app: pesgerest-api-container
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
  type: ClusterIP
