k8s/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: pesgerest-api-ingress
  namespace: $NAMESPACE
  annotations:
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
spec:
  tls:
    - hosts:
        - prod.api.pesge.com.ar
      secretName: pesgerest-tls
  rules:
    - host: prod.api.pesge.com.ar
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: pesgerest-api-service
                port:
                  number: 80
